# tab-researcher

./: README.md  pyproject.toml
tab_researcher/: main.py
